<resources>
    <string name="app_name" translatable="false">AmazingMusic</string>
    <string name="text_your_username">Text your username</string>
    <string name="text_your_password">Text your password</string>
    <string name="login">Login</string>
    <string name="rentable">Rentable:</string>
    <string name="price">price:</string>
    <string name="username_or_password_empty">Username or Password input is Empty</string>
    <string name="connect_server_failed">Failed to connect server</string>
    <string name="noaccount_register">No Account? Register</string>
    <string name="text_your_password_again">Text your password again</string>
    <string name="register">Register</string>
    <string name="password_digits" translatable="false">_.!@#$qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="twice_password_not_same">Twice Password not Same</string>
    <string name="mine">Mine</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="text_your_feedback">Text your feedback</string>
    <string name="left_drawer_open">Left drawer bar open</string>
    <string name="left_drawer_closed">Left drawer bar closed</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="text_your_keyword">Text what you want</string>
    <string name="play_all_songs">Play All</string>
    <string name="no_favorite_song">There is no any song</string>
    <string name="get_songs_error">Song not obtained, please check the net</string>
    <string name="get_songs_empty">There are no more songs left</string>
    <string name="kuwo_selected_tips">Kuwo audio source status, there is currently no content on the homepage.\nUse the search function.</string>
    <!-- Preference Titles -->
    <string name="feedback_header">Feedback</string>
    <string name="timer_header">Timed Stop</string>
    <string name="source_header">Music Source</string>

    <!-- Feedback Preferences -->
    <string name="feedback_title">Text what you want</string>
    <string name="submit">submit</string>

    <!-- Timer Preferences -->
    <string name="timer_title">Set Timer To Stop Playing</string>
    <string name="timer_summary_on">It will stop playing in %1$s minutes</string>
    <string name="timer_summary_off">Enable timed shutdown function</string>
    <string name="time_select_title">Timed Stop Time</string>
    <string name="stop_until_this_song_finish_title">Stop after song playing completed</string>
    <string name="source_select_title">Select a source</string>
    <string name="source_select_summary">Recommend using KuWo</string>
    <string name="lyric_tab">lyric</string>
    <string name="cover_tab">cover</string>
    <string name="zero_display" translatable="false">00:00</string>
</resources>