<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.media3.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:show_buffering="when_playing"
            app:use_controller="false" />

        <ImageView
            android:id="@+id/song_cover"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <com.dirror.lyricviewx.LyricViewX
            android:id="@+id/lrc_view"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cover_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/cover_tab"
            app:layout_constraintBottom_toBottomOf="@+id/switch_display"
            app:layout_constraintEnd_toStartOf="@+id/switch_display"
            app:layout_constraintTop_toTopOf="@+id/switch_display" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_cover" />

        <TextView
            android:id="@+id/lyric_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/lyric_tab"
            app:layout_constraintBottom_toBottomOf="@+id/switch_display"
            app:layout_constraintStart_toEndOf="@+id/switch_display"
            app:layout_constraintTop_toTopOf="@+id/switch_display" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/switch_group"
            app:constraint_referenced_ids="cover_tv,lyric_tv,switch_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time_cur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="40dp"
            android:text="@string/zero_display"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/play_seek_bar"
            style="@style/CustomSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="40dp"
            android:max="500"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/time_dur"
            app:layout_constraintStart_toEndOf="@id/time_cur" />

        <TextView
            android:id="@+id/time_dur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="40dp"
            android:text="@string/zero_display"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>